CSS / HTML : retré de la side bar - 2.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- Mobile responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- Base GitHub Pages
-    <base href="/Site_FrWeb/"> -->
+    <!-- Base GitHub Pages  -->
+    <base href="/Site_FrWeb/">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
